[metadata]
name = lab-assistant-utils
version = 1.0.0
author = Anthony Schexnaildre
author_email = aps@enclarify.com
description = Utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/enclarify/lab-assistant-utils
project_urls =
    Bug Tracker = https://github.com/enclarify/lab-assistant-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = = src
packages = find:
python_requires = >=3.8
install_requires =
    click==8.0.1

[options.packages.find]
where = src